# clawsino

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/8453/: run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: ClawsinoPayout.sol  FairnessVerifier.sol  MockUSDC.sol
contracts/test/: ClawsinoPayout.t.sol  FairnessVerifier.t.sol
dashboard/: index.html
docs/: API.md  DEMO.md  demo-script.md
scripts/: demo-autoplay.sh  demo.sh  deploy-local.sh  init.sh  integration-test.sh  setup.sh
server/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/__tests__/: edge-cases.test.ts  fairness.test.ts  games.test.ts  history.test.ts  payment-flow.test.ts
server/src/games/: blackjack.ts  coinflip.ts  dice.ts
server/src/middleware/: logging.ts  payment.ts  rateLimit.ts
server/src/routes/: games.ts
server/src/utils/: errors.ts  fairness.ts  history.ts
skill/: SKILL.md  pyproject.toml
skill/clawsino.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
skill/lib/: client.py  fairness.py  wallet.py
skill/scripts/: clawsino.py
